cfg: document IGA debug metrics + add iga_debug_interval

--- a/configs/Train_fm.yaml
+++ b/configs/Train_fm.yaml
@@ -74,6 +74,9 @@ experiment:
     aux_loss_use_bb_loss: True
     aux_loss_use_pair_loss: True
     aux_loss_t_pass: 0.5
+    # IGA debug logging (only active when the model returns `iga_debug`, i.e. FlowModelIGA backbone-only path).
+    # Set to 1 to log layer-level stats every step (more overhead), or a larger number to reduce logging volume.
+    iga_debug_interval: 10
   wandb:
     # For IPA-vs-IGA debugging, encode the backbone here so runs are comparable in W&B.
     # Current code path: FlowModelIGA uses IGA attention + IPA BackboneUpdate (no GaussianUpdateBlock).
@@ -84,6 +87,9 @@ experiment:
       with IPA BackboneUpdate (SE3 compose_q_update) via OffsetGaussianRigid.compose_update_12D(6D).
       Ellipsoid params (local_mean/scaling_log) are kept uncorrupted in the interpolant (gaussian_params.corrupt=false).
       Goal: isolate whether the regression comes from IGA attention or from the GaussianUpdateBlock.
+      This run also logs IGA numeric-stability diagnostics to W&B under `debug/iga/*`:
+      - `debug/iga/global/geo_scaled_absmax`, `debug/iga/global/wmax_sat_frac`, `debug/iga/global/log_det_min` every step
+      - layer snapshots `debug/iga/l0/*` and `debug/iga/l{last}/*` every `experiment.training.iga_debug_interval` steps.
   optimizer:
     lr: 0.0001
   trainer:
