--- a/configs/Train_fm.yaml
+++ b/configs/Train_fm.yaml
@@ -80,7 +80,7 @@ experiment:
   wandb:
     # For IPA-vs-IGA debugging, encode the backbone here so runs are comparable in W&B.
     # Current code path: FlowModelIGA uses IGA attention + IPA BackboneUpdate (no GaussianUpdateBlock).
-    name: ${data.task}_${data.dataset}_IGAattn_IPAupdate_noGnoise_logdetClamp20
+    name: ${data.task}_${data.dataset}_IGAattn_IPAupdate_noGnoise_logdetClamp20_sigmaMin03nm_scaleP
     project: se3-fm
     notes: >
       Debug run: FlowModelIGA uses IGA (InvariantGaussianAttention) in trunk, but updates backbone
@@ -92,6 +92,8 @@ experiment:
       - layer snapshots `debug/iga/l0/*` and `debug/iga/l{last}/*` every `experiment.training.iga_debug_interval` steps.
       Update: clamp raw log-det in IGA geometry logits with logdet_min=-20 to prevent near-singular covariances
       from producing unbounded positive bias (-0.5*log|Sigma|) that saturates softmax.
+      Update: enforce sigma_min_nm=0.03 (0.3A) in IGA Gaussian geometry and scale Gaussian-point aggregation by
+      1/sqrt(P) to reduce geometry-logit blow-ups from tiny sigmas and keep magnitude stable vs P.
   optimizer:
     lr: 0.0001
   trainer:
