--- a/configs/Train_fm.yaml
+++ b/configs/Train_fm.yaml
@@ -80,7 +80,7 @@ experiment:
   wandb:
     # For IPA-vs-IGA debugging, encode the backbone here so runs are comparable in W&B.
     # Current code path: FlowModelIGA uses IGA attention + IPA BackboneUpdate (no GaussianUpdateBlock).
-    name: ${data.task}_${data.dataset}_IGAattn_IPAupdate_noGnoise_logdetClamp20_sigmaMin03nm_scaleP
+    name: ${data.task}_${data.dataset}_IGAattn_IPAupdate_noGnoise_logdetClamp20_sigmaMin03nm_scaleP_geoInitM4
     project: se3-fm
     notes: >
       Debug run: FlowModelIGA uses IGA (InvariantGaussianAttention) in trunk, but updates backbone
@@ -94,6 +94,7 @@ experiment:
       from producing unbounded positive bias (-0.5*log|Sigma|) that saturates softmax.
       Update: enforce sigma_min_nm=0.03 (0.3A) in IGA Gaussian geometry and scale Gaussian-point aggregation by
       1/sqrt(P) to reduce geometry-logit blow-ups from tiny sigmas and keep magnitude stable vs P.
+      Update: initialize geo_scale to -4.0 (softplus~0.018) so geometry starts small and ramps by learning.
   optimizer:
     lr: 0.0001
   trainer:
